my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EAVPARAM/EAVPARAM.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EAVPARAM.dml:11:5: In b.r
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EAVPARAM.dml:14:18: error EFARRSZ: heterogeneous bitsize in field array
